# aurx

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  ws_handler.rs
backend/src/app/: app_err.rs  mod.rs
backend/src/database/schema/: file.rs  user.rs
backend/src/services/: auth.rs  database_uploader.rs  file.rs  file_chunk_manager.rs  file_details.rs  ipfs_uploader.rs  mod.rs  redis.rs  redis_connection.rs  redis_task.rs  solana_handler.rs
backend/src/types/: file_type.rs
frontend/src/: App.tsx  type.ts
frontend/src/services/: encrypt_decrypt.ts  ipfs_uploader.ts
