[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
socket2 = "0.5"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["full"] }