[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.3.0"
socket2 = "0.5"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
time = {version = "0.3.44", features = ["serde"]}
sea-orm = {version = "1.1.19",features = ["sqlx-postgres", "runtime-tokio-rustls" ,"macros"]}
dotenvy = "0.15.7"